# QR_Generator

./: .gitignore  CMakeLists.txt  README.md
include/: qr_encoder.h  qr_matrix.h  reed_solomon.h
src/: main.cpp
src/include/: qr_encoder.h  qr_matrix.h  reed_solomon.h
src/utils/: qr_encoder.cpp  qr_matrix.cpp  reed_solomon.cpp
